src/ui/snapshots/state/default/completion/success.snap
---
source: src/ui/state/default/completion.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🏁 Cherry-pick Process Completed!                                                                                   │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Cherry-pick Results────────────────────────────────────────────────────────┐┌Summary & Info─────────────────────────┐ "
" │✅ PR #100: Fix login bug                                                  ││Summary                                │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ PR #101: Update user profile page design                                ││                                       │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ PR #102: Add analytics tracking                                         ││✅ Successful: 4                       │ " Hidden by multi-width symbols: [(3, " "), (80, " ")]
" │✅ PR #103: Database schema changes                                        ││❌ Failed: 0                           │ " Hidden by multi-width symbols: [(3, " "), (80, " ")]
" │                                                                           ││                                       │ "
" │                                                                           ││─────────────────────                  │ "
" │                                                                           ││                                       │ "
" │                                                                           ││Branch Info                            │ "
" │                                                                           ││                                       │ "
" │                                                                           ││Branch: patch/main-v1.0.0              │ "
" │                                                                           ││Location: /path/to/repo                │ "
" │                                                                           ││                                       │ "
" │                                                                           ││─────────────────────                  │ "
" │                                                                           ││                                       │ "
" │                                                                           ││Actions                                │ "
" │                                                                           ││                                       │ "
" │                                                                           ││↑/↓ Navigate                           │ "
" │                                                                           ││'p' Open PR in browser                 │ "
" │                                                                           ││'w' Open work items                    │ "
" │                                                                           ││'r' Export release notes               │ "
" │                                                                           ││'t' Tag PRs & update work items to     │ "
" │                                                                           ││'Next Merged'                          │ "
" │                                                                           ││'q' Exit                               │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" │                                                                           ││                                       │ "
" └───────────────────────────────────────────────────────────────────────────┘└───────────────────────────────────────┘ "
"                                                                                                                        "
